generated/ANTLR/TParser.cpp
/* parser/listener/visitor header section */

// Generated from ANTLR/TParser.g4 by ANTLR 4.13.2

/* parser precinclude section */

#include "TParserListener.h"
#include "TParserVisitor.h"

#include "TParser.h"


/* parser postinclude section */
#ifndef _WIN32
#pragma GCC diagnostic ignored "-Wunused-parameter"
#endif


using namespace antlrcpp;
using namespace antlrcpptest;

using namespace antlr4;

namespace {

struct TParserStaticData final {
  TParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  TParserStaticData(const TParserStaticData&) = delete;
  TParserStaticData(TParserStaticData&&) = delete;
  TParserStaticData& operator=(const TParserStaticData&) = delete;
  TParserStaticData& operator=(TParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag tparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<TParserStaticData> tparserParserStaticData = nullptr;

void tparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (tparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(tparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<TParserStaticData>(
    std::vector<std::string>{
      "translationUnit", "externalDeclaration", "functionDefinition", "declaration", 
      "declarationSpecifiers", "declarationSpecifier", "storageClassSpecifier", 
      "typeSpecifier", "typeQualifier", "structSpecifier", "unionSpecifier", 
      "structDeclarationList", "structDeclaration", "structDeclaratorList", 
      "structDeclarator", "enumSpecifier", "enumeratorList", "enumerator", 
      "initDeclaratorList", "initDeclarator", "declarator", "directDeclarator", 
      "pointer", "parameterTypeList", "parameterList", "parameterDeclaration", 
      "initializer", "initializerList", "statement", "labeledStatement", 
      "compoundStatement", "blockItemList", "blockItem", "expressionStatement", 
      "selectionStatement", "iterationStatement", "jumpStatement", "expression", 
      "assignmentExpression", "conditionalExpression", "constantExpression", 
      "logicalOrExpression", "logicalAndExpression", "inclusiveOrExpression", 
      "exclusiveOrExpression", "andExpression", "equalityExpression", "relationalExpression", 
      "shiftExpression", "additiveExpression", "multiplicativeExpression", 
      "castExpression", "unaryExpression", "unaryOperator", "postfixExpression", 
      "primaryExpression", "argumentExpressionList", "constant"
    },
    std::vector<std::string>{
      "", "", "'auto'", "'break'", "'case'", "'char'", "'const'", "'continue'", 
      "'default'", "'do'", "'double'", "'else'", "'enum'", "'extern'", "'float'", 
      "'for'", "'goto'", "'if'", "'inline'", "'int'", "'long'", "'register'", 
      "'restrict'", "'return'", "'short'", "'signed'", "'sizeof'", "'static'", 
      "'struct'", "'switch'", "'typedef'", "'union'", "'unsigned'", "'void'", 
      "'volatile'", "'while'", "'_Alignas'", "'_Alignof'", "'_Atomic'", 
      "'_Bool'", "'_Complex'", "'_Generic'", "'_Imaginary'", "'_Noreturn'", 
      "'_Static_assert'", "'_Thread_local'", "", "", "", "", "", "", "", 
      "'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", "'->'", "'++'", "'--'", 
      "'+'", "'-'", "'*'", "'/'", "'%'", "'&'", "'|'", "'^'", "'~'", "'!'", 
      "'='", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'&&'", "'||'", 
      "'\\u003F'", "':'", "';'", "','", "'...'"
    },
    std::vector<std::string>{
      "", "DUMMY", "Auto", "Break", "Case", "Char", "Const", "Continue", 
      "Default", "Do", "Double", "Else", "Enum", "Extern", "Float", "For", 
      "Goto", "If", "Inline", "Int", "Long", "Register", "Restrict", "Return", 
      "Short", "Signed", "Sizeof", "Static", "Struct", "Switch", "Typedef", 
      "Union", "Unsigned", "Void", "Volatile", "While", "Alignas", "Alignof", 
      "Atomic", "Bool", "Complex", "Generic", "Imaginary", "Noreturn", "StaticAssert", 
      "ThreadLocal", "CxxClass", "CxxNamespace", "Identifier", "IntegerConstant", 
      "FloatingConstant", "CharacterConstant", "StringLiteral", "LeftParen", 
      "RightParen", "LeftBracket", "RightBracket", "LeftBrace", "RightBrace", 
      "Dot", "Arrow", "PlusPlus", "MinusMinus", "Plus", "Minus", "Star", 
      "Slash", "Percent", "And", "Or", "Caret", "Tilde", "Not", "Assign", 
      "Less", "Greater", "LessEqual", "GreaterEqual", "Equal", "NotEqual", 
      "AndAnd", "OrOr", "Question", "Colon", "Semi", "Comma", "Ellipsis", 
      "Preprocessor", "LineComment", "BlockComment", "Whitespace"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  tparserParserStaticData = std::move(staticData);
}

}

TParser::TParser(TokenStream *input) : TParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

TParser::TParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  TParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *tparserParserStaticData->atn, tparserParserStaticData->decisionToDFA, tparserParserStaticData->sharedContextCache, options);
}

TParser::~TParser() {
  delete _interpreter;
}

const atn::ATN& TParser::getATN() const {
  return *tparserParserStaticData->atn;
}

std::string TParser::getGrammarFileName() const {
  return "TParser.g4";
}

const std::vector<std::string>& TParser::getRuleNames() const {
  return tparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& TParser::getVocabulary() const {
  return tparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView TParser::getSerializedATN() const {
  return tparserParserStaticData->serializedATN;
}

/* parser definitions section */

//----------------- TranslationUnitContext ------------------------------------------------------------------

TParser::TranslationUnitContext::TranslationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TParser::ExternalDeclarationContext *> TParser::TranslationUnitContext::externalDeclaration() {
  return getRuleContexts<TParser::ExternalDeclarationContext>();
}

TParser::ExternalDeclarationContext* TParser::TranslationUnitContext::externalDeclaration(size_t i) {
  return getRuleContext<TParser::ExternalDeclarationContext>(i);
}


size_t TParser::TranslationUnitContext::getRuleIndex() const {
  return TParser::RuleTranslationUnit;
}

void TParser::TranslationUnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTranslationUnit(this);
}

void TParser::TranslationUnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTranslationUnit(this);
}


std::any TParser::TranslationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitTranslationUnit(this);
  else
    return visitor->visitChildren(this);
}

TParser::TranslationUnitContext* TParser::translationUnit() {
  TranslationUnitContext *_localctx = _tracker.createInstance<TranslationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, TParser::RuleTranslationUnit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(119);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 858380596324) != 0)) {
      setState(116);
      externalDeclaration();
      setState(121);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExternalDeclarationContext ------------------------------------------------------------------

TParser::ExternalDeclarationContext::ExternalDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TParser::FunctionDefinitionContext* TParser::ExternalDeclarationContext::functionDefinition() {
  return getRuleContext<TParser::FunctionDefinitionContext>(0);
}

TParser::DeclarationContext* TParser::ExternalDeclarationContext::declaration() {
  return getRuleContext<TParser::DeclarationContext>(0);
}


size_t TParser::ExternalDeclarationContext::getRuleIndex() const {
  return TParser::RuleExternalDeclaration;
}

void TParser::ExternalDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExternalDeclaration(this);
}

void TParser::ExternalDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExternalDeclaration(this);
}


std::any TParser::ExternalDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitExternalDeclaration(this);
  else
    return visitor->visitChildren(this);
}

TParser::ExternalDeclarationContext* TParser::externalDeclaration() {
  ExternalDeclarationContext *_localctx = _tracker.createInstance<ExternalDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, TParser::RuleExternalDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(124);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(122);
      functionDefinition();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(123);
      declaration();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDefinitionContext ------------------------------------------------------------------

TParser::FunctionDefinitionContext::FunctionDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TParser::DeclarationSpecifiersContext* TParser::FunctionDefinitionContext::declarationSpecifiers() {
  return getRuleContext<TParser::DeclarationSpecifiersContext>(0);
}

TParser::DeclaratorContext* TParser::FunctionDefinitionContext::declarator() {
  return getRuleContext<TParser::DeclaratorContext>(0);
}

TParser::CompoundStatementContext* TParser::FunctionDefinitionContext::compoundStatement() {
  return getRuleContext<TParser::CompoundStatementContext>(0);
}


size_t TParser::FunctionDefinitionContext::getRuleIndex() const {
  return TParser::RuleFunctionDefinition;
}

void TParser::FunctionDefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionDefinition(this);
}

void TParser::FunctionDefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionDefinition(this);
}


std::any TParser::FunctionDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitFunctionDefinition(this);
  else
    return visitor->visitChildren(this);
}

TParser::FunctionDefinitionContext* TParser::functionDefinition() {
  FunctionDefinitionContext *_localctx = _tracker.createInstance<FunctionDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 4, TParser::RuleFunctionDefinition);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(126);
    declarationSpecifiers();
    setState(127);
    declarator();
    setState(128);
    compoundStatement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

TParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TParser::DeclarationSpecifiersContext* TParser::DeclarationContext::declarationSpecifiers() {
  return getRuleContext<TParser::DeclarationSpecifiersContext>(0);
}

tree::TerminalNode* TParser::DeclarationContext::Semi() {
  return getToken(TParser::Semi, 0);
}

TParser::InitDeclaratorListContext* TParser::DeclarationContext::initDeclaratorList() {
  return getRuleContext<TParser::InitDeclaratorListContext>(0);
}


size_t TParser::DeclarationContext::getRuleIndex() const {
  return TParser::RuleDeclaration;
}

void TParser::DeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration(this);
}

void TParser::DeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration(this);
}


std::any TParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

TParser::DeclarationContext* TParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, TParser::RuleDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(130);
    declarationSpecifiers();
    setState(132);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (((((_la - 48) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 48)) & 131105) != 0)) {
      setState(131);
      initDeclaratorList();
    }
    setState(134);
    match(TParser::Semi);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationSpecifiersContext ------------------------------------------------------------------

TParser::DeclarationSpecifiersContext::DeclarationSpecifiersContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TParser::DeclarationSpecifierContext *> TParser::DeclarationSpecifiersContext::declarationSpecifier() {
  return getRuleContexts<TParser::DeclarationSpecifierContext>();
}

TParser::DeclarationSpecifierContext* TParser::DeclarationSpecifiersContext::declarationSpecifier(size_t i) {
  return getRuleContext<TParser::DeclarationSpecifierContext>(i);
}


size_t TParser::DeclarationSpecifiersContext::getRuleIndex() const {
  return TParser::RuleDeclarationSpecifiers;
}

void TParser::DeclarationSpecifiersContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclarationSpecifiers(this);
}

void TParser::DeclarationSpecifiersContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclarationSpecifiers(this);
}


std::any TParser::DeclarationSpecifiersContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitDeclarationSpecifiers(this);
  else
    return visitor->visitChildren(this);
}

TParser::DeclarationSpecifiersContext* TParser::declarationSpecifiers() {
  DeclarationSpecifiersContext *_localctx = _tracker.createInstance<DeclarationSpecifiersContext>(_ctx, getState());
  enterRule(_localctx, 8, TParser::RuleDeclarationSpecifiers);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(137); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(136);
      declarationSpecifier();
      setState(139); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 858380596324) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationSpecifierContext ------------------------------------------------------------------

TParser::DeclarationSpecifierContext::DeclarationSpecifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TParser::StorageClassSpecifierContext* TParser::DeclarationSpecifierContext::storageClassSpecifier() {
  return getRuleContext<TParser::StorageClassSpecifierContext>(0);
}

TParser::TypeSpecifierContext* TParser::DeclarationSpecifierContext::typeSpecifier() {
  return getRuleContext<TParser::TypeSpecifierContext>(0);
}

TParser::TypeQualifierContext* TParser::DeclarationSpecifierContext::typeQualifier() {
  return getRuleContext<TParser::TypeQualifierContext>(0);
}


size_t TParser::DeclarationSpecifierContext::getRuleIndex() const {
  return TParser::RuleDeclarationSpecifier;
}

void TParser::DeclarationSpecifierContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclarationSpecifier(this);
}

void TParser::DeclarationSpecifierContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclarationSpecifier(this);
}


std::any TParser::DeclarationSpecifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitDeclarationSpecifier(this);
  else
    return visitor->visitChildren(this);
}

TParser::DeclarationSpecifierContext* TParser::declarationSpecifier() {
  DeclarationSpecifierContext *_localctx = _tracker.createInstance<DeclarationSpecifierContext>(_ctx, getState());
  enterRule(_localctx, 10, TParser::RuleDeclarationSpecifier);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(144);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TParser::Auto:
      case TParser::Extern:
      case TParser::Register:
      case TParser::Static:
      case TParser::Typedef: {
        enterOuterAlt(_localctx, 1);
        setState(141);
        storageClassSpecifier();
        break;
      }

      case TParser::Char:
      case TParser::Double:
      case TParser::Enum:
      case TParser::Float:
      case TParser::Int:
      case TParser::Long:
      case TParser::Short:
      case TParser::Signed:
      case TParser::Struct:
      case TParser::Union:
      case TParser::Unsigned:
      case TParser::Void:
      case TParser::Bool: {
        enterOuterAlt(_localctx, 2);
        setState(142);
        typeSpecifier();
        break;
      }

      case TParser::Const:
      case TParser::Restrict:
      case TParser::Volatile:
      case TParser::Atomic: {
        enterOuterAlt(_localctx, 3);
        setState(143);
        typeQualifier();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StorageClassSpecifierContext ------------------------------------------------------------------

TParser::StorageClassSpecifierContext::StorageClassSpecifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TParser::StorageClassSpecifierContext::Auto() {
  return getToken(TParser::Auto, 0);
}

tree::TerminalNode* TParser::StorageClassSpecifierContext::Register() {
  return getToken(TParser::Register, 0);
}

tree::TerminalNode* TParser::StorageClassSpecifierContext::Static() {
  return getToken(TParser::Static, 0);
}

tree::TerminalNode* TParser::StorageClassSpecifierContext::Extern() {
  return getToken(TParser::Extern, 0);
}

tree::TerminalNode* TParser::StorageClassSpecifierContext::Typedef() {
  return getToken(TParser::Typedef, 0);
}


size_t TParser::StorageClassSpecifierContext::getRuleIndex() const {
  return TParser::RuleStorageClassSpecifier;
}

void TParser::StorageClassSpecifierContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStorageClassSpecifier(this);
}

void TParser::StorageClassSpecifierContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStorageClassSpecifier(this);
}


std::any TParser::StorageClassSpecifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TParserVisitor*>(visitor))
    return parserVisitor->visitStorageClassSpecifier(this);
  else
    return visitor->visitChildren(this);
}

TParser::StorageClassSpecifierContext* TParser::storageClassSpecifier() {
  StorageClassSpecifierContext *_localctx = _tracker.createInstance<StorageClassSpecifierContext>(_ctx, getState());
  enterRule(_localctx, 12, TParser::RuleStorageClassSpecifier);
  size_t _la = 0;
